[gd_scene load_steps=4 format=3 uid="uid://ca1rqusfkrwu4"]

[ext_resource type="Theme" uid="uid://7yoxxwxaw0n2" path="res://Resources/Fonts/maintheme.tres" id="1_i0qhx"]
[ext_resource type="Script" path="res://Scenes/Menus/GameOverScreen.gd" id="2_k0jmf"]
[ext_resource type="Script" path="res://Scenes/Menus/Lives.gd" id="3_y35tg"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_i0qhx")
script = ExtResource("2_k0jmf")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Labels" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Lives Remaining" type="Label" parent="CenterContainer/VBoxContainer/Labels"]
layout_mode = 2
text = "Lives Remaining: "

[node name="Lives" type="Label" parent="CenterContainer/VBoxContainer/Labels"]
layout_mode = 2
script = ExtResource("3_y35tg")

[node name="TryAgainButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Try Again?"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="GameOverBox" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Game Over" type="Label" parent="CenterContainer/GameOverBox"]
layout_mode = 2
text = "Game Over








yeah I know there's no point
to having lives and game overs

I just wanted to see if I could 
program it lol"

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="GameOverTimer" to="." method="_on_game_over_timer_timeout"]
